--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
-  "name": "likelioneditor",
-  "version": "0.1.0",
-  "private": true,
+  "name": "editor_likelion",
+  "author": {
+    "name": "Hyeonwoo Kim",
+    "email": "gentlemonster77@likelion.org"
+  },
+  "version": "1.0.4",
+  "private": false,
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "description": "likelion editor",
+  "browser": "./browser/specific/main.js",
+  "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +19,7 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "editor_likelion": "^1.0.4",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
@@ -21,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "rm -rf dist && mkdir dist && tsc"
   },
   "eslintConfig": {
     "extends": [
