--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "name": "Hyeonwoo Kim",
     "email": "gentlemonster77@likelion.org"
   },
-  "version": "1.0.4",
+  "files": [
+    "dist"
+  ],
+  "version": "1.1.0",
   "private": false,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -12,27 +15,24 @@
   "browser": "./browser/specific/main.js",
   "license": "MIT",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
+    "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@types/node": "^16.18.38",
-    "@types/react": "^18.2.15",
+    "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
-    "editor_likelion": "^1.0.4",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "rm -rf dist && mkdir dist && tsc"
+    "prepare": "rm -rf dist && mkdir dist && tsc && cp -r src/lib/Icon dist/Icon && cp -r src/lib/styles/global.css dist/styles"
   },
   "eslintConfig": {
     "extends": [
